--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      html, body {
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-weight: normal;
+      }
+      h1, h2, h3 {
+        font-weight: lighter;
+      }
+    </style>
   </head>
   <body>
+    <h1>Dial Input</h1>
     <input type="range" value="50" />
     <script type="module">
       import Dial from "./src/index.js";
