--- a/index.html
+++ b/index.html
@@ -6,18 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-      html, body {
-        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+      html,
+      body {
+        font-family: sans-serif;
         font-weight: normal;
       }
-      h1, h2, h3 {
+      h1,
+      h2,
+      h3 {
         font-weight: lighter;
+      }
+      .active .knob {
+        fill: #007aff;
       }
     </style>
   </head>
   <body>
     <h1>Dial Input</h1>
     <input type="range" value="50" />
+    <p>Value: <span>50</span></p>
     <script type="module">
       import Dial from "./src/index.js";
       Dial("[type='range']");
